--- a/Notebook/Jupyter/path/KasagoDL1.ipynb
+++ b/Notebook/Jupyter/path/KasagoDL1.ipynb
@@ -12,12 +12,90 @@
     "## ニューラルネットワークの構成要素\n",
     "\n",
     "## [目次](TableOfContents.ipynb)\n",
+    "- [環境準備](#環境準備)\n",
+    "  - [インストール](#インストール)\n",
+    "  - [インポート](#インポート)\n",
     "- [パーセプトロン](#パーセプトロン)\n",
+    "  - [パーセプトロンの概要](#パーセプトロンの概要)\n",
+    "  - [パーセプトロンで表現したゲート](#パーセプトロンで表現したゲート)\n",
+    "    - [ANDゲートの実装](#ANDゲートの実装)\n",
+    "    - [NANDゲートの実装](#NANDゲートの実装)\n",
+    "    - [ORゲートの実装](#ORゲートの実装)\n",
+    "    - [XORゲートの実装](#XORゲートの実装)\n",
     "- [活性化関数](#活性化関数)\n",
+    "  - [活性化関数の概要](#活性化関数の概要)\n",
+    "  - [活性化関数の実装](#活性化関数の実装)\n",
+    "    - [中間層の活性化関数](#中間層の活性化関数)\n",
+    "      - [Step関数](#Step関数)\n",
+    "      - [Sigmoid関数](#Sigmoid関数)\n",
+    "      - [ReLU関数](#ReLU関数)\n",
+    "      - [Leaky ReLU関数](#Leaky_ReLU関数)\n",
+    "      - [Absolute value rectification](#Absolute_value_rectification)\n",
+    "    - [出力層の活性化関数](#出力層の活性化関数)\n",
+    "      - [恒等関数](#恒等関数)\n",
+    "      - [Sigmoid関数](#Sigmoid関数_)\n",
+    "      - [Softmax関数](#Softmax関数)\n",
     "\n",
     "## 参考\n",
     "- https://github.com/oreilly-japan/deep-learning-from-scratch/blob/master/notebooks/\n",
     "- [深層学習（deep learning） - 開発基盤部会 Wiki](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E6%B7%B1%E5%B1%A4%E5%AD%A6%E7%BF%92%EF%BC%88deep%20learning%EF%BC%89) > [パーセプトロン](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%91%E3%83%BC%E3%82%BB%E3%83%97%E3%83%88%E3%83%AD%E3%83%B3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c39e2e7-67b7-464d-b254-68521ef5a3de",
+   "metadata": {},
+   "source": [
+    "## 環境準備"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1ea6589-87d6-459c-b8b8-55179ed99adf",
+   "metadata": {},
+   "source": [
+    "### インストール"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a65c1a3d-fc30-4a7f-b180-a221b11e7ea2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install numpy\n",
+    "!pip install matplotlib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1e4d655-73aa-4cef-9def-0de5a4ef83d1",
+   "metadata": {},
+   "source": [
+    "### インポート"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9854310-e2f8-48c9-986c-e05d242744b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d96a909-b830-4776-890f-b6cef29a456d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -80,8 +158,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "def AND(x1, x2):\n",
     "    x = np.array([x1, x2])\n",
     "    w = np.array([0.5, 0.5])\n",
@@ -113,8 +189,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "def NAND(x1, x2):\n",
     "    x = np.array([x1, x2])\n",
     "    w = np.array([-0.5, -0.5])\n",
@@ -146,8 +220,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "def OR(x1, x2):\n",
     "    x = np.array([x1, x2])\n",
     "    w = np.array([0.5, 0.5])\n",
@@ -246,9 +318,9 @@
    "id": "f40f4471-ca39-4916-a9a0-47a1408c3c3b",
    "metadata": {},
    "source": [
-    "##### ステップ関数\n",
+    "##### Step関数\n",
     "0, 1の信号\n",
-    "- 単純パーセプトロンの活性化関数はステップ関数。\n",
+    "- 単純パーセプトロンの活性化関数はStep関数。\n",
     "- ある閾値を超えたら「1」、それ以外は「0」を返す関数。\n",
     "\n",
     "https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%8B%E3%83%A5%E3%83%BC%E3%83%A9%E3%83%AB%E3%83%8D%E3%83%83%E3%83%88%E3%83%AF%E3%83%BC%E3%82%AF#af597062"
@@ -261,9 +333,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pylab as plt\n",
-    "\n",
     "def step_function(x):\n",
     "    return np.array(x > 0, dtype=np.int32)\n",
     "\n",
@@ -279,7 +348,7 @@
    "id": "4a114819-bb04-48d9-81c4-93c2c1632506",
    "metadata": {},
    "source": [
-    "##### シグモイド関数\n",
+    "##### Sigmoid関数\n",
     "連続的な実数の信号\n",
     "- 生物の神経細胞が持つ性質をモデル化したもの。\n",
     "- 微分可能で誤差逆伝播法（バックプロパゲーション）が可能だが、勾配消失問題が起こる。\n",
@@ -294,9 +363,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pylab as plt\n",
-    "\n",
     "def sigmoid(x):\n",
     "    return 1 / (1 + np.exp(-x))    \n",
     "\n",
@@ -309,13 +375,43 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f7d5da13-397d-4593-bd1a-529b795557e2",
+   "metadata": {},
+   "source": [
+    "##### tanh関数\n",
+    "Sigmoid関数を変形させた関数\n",
+    "- tanh（Hyperbolic tangent function）関数、双曲線正接関数\n",
+    "- あらゆる入力値を-1.0～1.0の範囲の数値に変換して出力する関数。\n",
+    "\n",
+    "https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%8B%E3%83%A5%E3%83%BC%E3%83%A9%E3%83%AB%E3%83%8D%E3%83%83%E3%83%88%E3%83%AF%E3%83%BC%E3%82%AF#x6c1dfdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4600e288-6cd5-410c-9aa6-fa0666ec056a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tanh(x):\n",
+    "    return  np.tanh(x)\n",
+    "\n",
+    "x = np.arange(-10.0, 10.0, 0.1)\n",
+    "y = tanh(x)\n",
+    "plt.plot(x, y)\n",
+    "plt.ylim(-1.2, 1.2)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f02a7298-288d-4cdb-832d-f100ad130496",
    "metadata": {},
    "source": [
     "##### ReLU関数\n",
     "勾配消失問題を防ぐ関数として主流。\n",
-    "- 入力が０以下なら０を出力する。\n",
-    "- 入力が０を超えていればそのまま出力する。\n",
+    "- 入力x が０以下なら０を出力する。\n",
+    "- 入力x が０を超えていれば x をそのまま出力する。\n",
     "\n",
     "https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%8B%E3%83%A5%E3%83%BC%E3%83%A9%E3%83%AB%E3%83%8D%E3%83%83%E3%83%88%E3%83%AF%E3%83%BC%E3%82%AF#x80775f2"
    ]
@@ -327,9 +423,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pylab as plt\n",
-    "\n",
     "def relu(x):\n",
     "    return np.maximum(0, x)\n",
     "\n",
@@ -337,6 +430,67 @@
     "y = relu(x)\n",
     "plt.plot(x, y)\n",
     "plt.ylim(-1.0, 5.5)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b46a4975-9025-4135-b0f9-462bfa2d23d4",
+   "metadata": {},
+   "source": [
+    "##### Leaky_ReLU関数\n",
+    "- ReLUの入力x が０以下の部分に僅かな傾斜をつけた関数\n",
+    "  - 入力x が０以下なら alpha * x を出力する。\n",
+    "  - 入力x が０を超えていれば x をそのまま出力する。\n",
+    "- 係数 α を\n",
+    "  - 学習を通して変動させるものがParametric ReLU\n",
+    "  - ランダムに試すものがRandomized ReLU\n",
+    "\n",
+    "https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%8B%E3%83%A5%E3%83%BC%E3%83%A9%E3%83%AB%E3%83%8D%E3%83%83%E3%83%88%E3%83%AF%E3%83%BC%E3%82%AF#v32e29fb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30814e05-f398-4e0f-9b55-6c417ef44de3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def leaky_relu(x, alpha=0.01):\n",
+    "    y = np.where(x > 0, x , alpha * x)\n",
+    "    return y\n",
+    "\n",
+    "x = np.arange(-5.0, 5.0, 0.1)\n",
+    "y = leaky_relu(x, alpha=0.1)\n",
+    "plt.plot(x, y)\n",
+    "plt.ylim(-1.0, 5.5)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2403485b-6ba8-43c5-b1b0-bcb3812e1041",
+   "metadata": {},
+   "source": [
+    "##### Absolute_value_rectification\n",
+    "- 傾き45°の直線の絶対値を取った関数\n",
+    "- 主に物体認識に使用されている。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12b77875-2ee7-4a62-90a9-b3e02d1113fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def abs_relu(x):\n",
+    "    return np.abs(x) \n",
+    "\n",
+    "X = np.arange(-1.0, 1.0, 0.1)\n",
+    "Y = abs_relu(X)\n",
+    "plt.plot(X, Y)\n",
+    "plt.ylim(-0.1, 1.1)\n",
     "plt.show()"
    ]
   },
@@ -368,18 +522,22 @@
   {
    "cell_type": "markdown",
    "id": "85c75f7e-5fb1-41da-98cd-4e7a59d518fd",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "##### [シグモイド関数](#シグモイド関数)\n",
+    "##### [Sigmoid関数_](#Sigmoid関数)\n",
     "２値分類問題で使用する"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "483340a4-dab7-491b-a803-b5f9761f11ce",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "##### ソフトマックス関数\n",
+    "##### Softmax関数\n",
     "- 多値分類問題で使用する（[使用例](KasagoDL2.ipynb#MINSTデータの推論)\n",
     "  - 出力層は分類の数。\n",
     "  - 0-1 の実数に計算され、その総和は 1.0 になる。\n",
