--- a/Notebook/Jupyter/path/KasagoDL2.ipynb
+++ b/Notebook/Jupyter/path/KasagoDL2.ipynb
@@ -12,7 +12,18 @@
     "## [目次](TableOfContents.ipynb)\n",
     "- [多層パーセプトロン（ニューラルネットワーク](#多層パーセプトロン（ニューラルネットワーク)\n",
     "- [MINST順方向（推論](#MINST順方向（推論)\n",
+    "  - [MINSTデータのロード](#MINSTデータのロード)\n",
+    "  - [MINSTデータの推論](#MINSTデータの推論)\n",
+    "  - [MINSTデータの推論（バッチ化](#MINSTデータの推論（バッチ化)\n",
     "- [MINST逆方向（学習](#MINST逆方向（学習)\n",
+    "  - [損失関数](#損失関数)\n",
+    "    - [2乗和誤差](#2乗和誤差)\n",
+    "    - [交差エントロピー誤差](#交差エントロピー誤差)\n",
+    "  - [勾配降下法](#勾配降下法)\n",
+    "    - [微分](#微分)\n",
+    "      - [数値微分](#数値微分)\n",
+    "      - [偏微分](#偏微分)\n",
+    "    - [パラメタ更新](#パラメタ更新)\n",
     "\n",
     "## 参考\n",
     "- https://github.com/oreilly-japan/deep-learning-from-scratch/blob/master/notebooks/\n",
@@ -110,8 +121,8 @@
     "    - 出力層ベクトルがm（MISNT：0-9の10\n",
     "  - の場合、重みはn行m列の行列になる。\n",
     "- なお活性化関数は、\n",
-    "  - 入力層は、[シグモイド関数](KasagoDL1.ipynb)を使っている。\n",
-    "  - 出力層は、10クラス分類なので、0-9の10個で、[ソフトマックス関数](KasagoDL1.ipynb)になる。\n",
+    "  - 入力層は、[Sigmoid関数](KasagoDL1.ipynb)を使っている。\n",
+    "  - 出力層は、10クラス分類なので、0-9の10個で、[Softmax関数](KasagoDL1.ipynb)になる。\n",
     "- Import\n",
     "  - [dataset/mnist.py](Kasago/dataset/mnist.py)\n",
     "  - [common/functions.py](Kasago/common/functions.py)"
@@ -325,9 +336,9 @@
    "metadata": {},
    "source": [
     "#### 交差エントロピー誤差\n",
-    "- 多値分類の場合（[ソフトマックス関数](KasagoDL1.ipynb)と相性が良く、正解ラベルのykデータの底がeの自然対数 log eを計算する。\n",
-    "- なお、この[損失関数](#損失関数)は、入力をy（[ソフトマックス関数](KasagoDL1.ipynb)の出力）, t（教師データ）とした時、  \n",
-    "[ソフトマックス関数](KasagoDL1.ipynb)の[逆伝播](KasagoDL3.ipynb)が y-t となるように設計されている。\n",
+    "- 多値分類の場合（[Softmax関数](KasagoDL1.ipynb)と相性が良く、正解ラベルのykデータの底がeの自然対数 log eを計算する。\n",
+    "- なお、この[損失関数](#損失関数)は、入力をy（[Softmax関数](KasagoDL1.ipynb)の出力）, t（教師データ）とした時、  \n",
+    "[Softmax関数](KasagoDL1.ipynb)の[逆伝播](KasagoDL3.ipynb)が y-t となるように設計されている。\n",
     "$$\n",
     "    E = - \\sum_{k}tk \\log _e yk\n",
     "$$"
@@ -911,7 +922,7 @@
     "        # ベクトルと重みの積算\n",
     "        y = np.dot(x, self.W)\n",
     "        \n",
-    "        # ソフトマックス\n",
+    "        # Softmax\n",
     "        return softmax(y)\n",
     "        \n",
     "    def loss(self, x, t):\n",
@@ -1007,13 +1018,13 @@
     "        # 隠れ層\n",
     "        # ベクトルと重みの積算＋バイアス\n",
     "        a1 = np.dot(x, W1) + b1\n",
-    "        # 活性化関数（シグモイド関数\n",
+    "        # 活性化関数（Sigmoid関数\n",
     "        z1 = sigmoid(a1)\n",
     "        \n",
     "        # 出力層\n",
     "        # ベクトルと重みの積算＋バイアス\n",
     "        a2 = np.dot(z1, W2) + b2\n",
-    "        # 活性化関数（ソフトマックス関数\n",
+    "        # 活性化関数（Softmax関数\n",
     "        y = softmax(a2)\n",
     "        \n",
     "        return y\n",
