--- a/Notebook/Jupyter/path/KasagoDL3.ipynb
+++ b/Notebook/Jupyter/path/KasagoDL3.ipynb
@@ -11,7 +11,11 @@
     "\n",
     "## [目次](TableOfContents.ipynb)\n",
     "- [計算グラフ](#計算グラフ)\n",
+    "  - [計算グラフのレイヤの定義](#計算グラフのレイヤの定義)\n",
+    "  - [計算グラフの逆伝播](#計算グラフの逆伝播)\n",
     "- [ニューラルネットワーク](#ニューラルネットワーク)\n",
+    "  - [ニューラルネットワークのレイヤの定義](#ニューラルネットワークのレイヤの定義)\n",
+    "  - [ニューラルネットワークの逆伝播](#ニューラルネットワークの逆伝播)\n",
     "\n",
     "## 参考\n",
     "- https://github.com/oreilly-japan/deep-learning-from-scratch/blob/master/notebooks/\n",
@@ -273,13 +277,23 @@
     "- backwardの出力は、forwardの入力の重み変数に対する勾配になる。\n",
     "- 特にforwardでは、最後に誤差関数を用いるため、  \n",
     "backwardは誤差を０にするような重みを求めるための勾配になる。\n",
-    "- 従って、レイヤのクラスは以下のメソッドを持つ。\n",
+    "- 従って、各レイヤのクラスは以下のメソッドを持つ。\n",
     "  - \\_\\_init\\_\\_(self, ...\n",
     "  - def forward(self, ...\n",
     "  - def backward(self, ...\n",
-    "- 各レイヤに実装されている処理は[コチラ](KasagoDL2.ipynb)を参考にすると良い。\n",
-    "- Import\n",
+    "- 各レイヤに実装されている処理は下記を参考にすると良い。\n",
+    "  - [前項](KasagoDL2.ipynb)\n",
     "  - [common/layers.py](Kasago/common/layers.py)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "231fa373-0a68-4134-8c90-51595b4f8e37",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "##### 各レイヤとその定義"
    ]
   },
   {
@@ -287,7 +301,7 @@
    "id": "8980326c-c4ca-4da5-af8a-ec313011b1cc",
    "metadata": {},
    "source": [
-    "##### 中間層・出力層のレイヤ\n",
+    "###### 中間層・出力層のレイヤ\n",
     "- Affine  \n",
     "中間層・出力層の重みとバイアスを処理するレイヤ"
    ]
@@ -297,9 +311,9 @@
    "id": "ee71f029-f86a-4021-9010-40349746c9bd",
    "metadata": {},
    "source": [
-    "##### 中間層の活性化関数のレイヤ\n",
+    "###### 中間層の活性化関数のレイヤ\n",
     "- Sigmoid  \n",
-    "[中間層の活性化関数のシグモイド関数](KasagoDL1.ipynb)\n",
+    "[中間層の活性化関数のSigmoid関数](KasagoDL1.ipynb)\n",
     "- Relu  \n",
     "[中間層の活性化関数のRelu関数](KasagoDL1.ipynb)"
    ]
@@ -309,9 +323,9 @@
    "id": "5f31de83-4354-4af7-bc7e-1283c724c5fd",
    "metadata": {},
    "source": [
-    "##### 出力層のソフトマックス関数のレイヤ\n",
+    "###### 出力層のSoftmax関数のレイヤ\n",
     "- SoftmaxWithLoss  \n",
-    "[出力層の活性化関数のソフトマックス関数](KasagoDL1.ipynb)と  \n",
+    "[出力層の活性化関数のSoftmax関数](KasagoDL1.ipynb)と  \n",
     "[交差エントロピー誤差の損失関数](KasagoDL2.ipynb)の両方が実装されている。"
    ]
   },
