--- a/Notebook/Jupyter/path/KasagoDL4.ipynb
+++ b/Notebook/Jupyter/path/KasagoDL4.ipynb
@@ -11,11 +11,16 @@
     "\n",
     "## [目次](TableOfContents.ipynb)\n",
     "- [勾配降下法アルゴリズムの選択](#勾配降下法アルゴリズムの選択)\n",
-    "- [重み初期値とアクティベーション分布](#重み初期値とアクティベーション分布)\n",
-    "- [バッチ正規化_BatchNormalization](#バッチ正規化_BatchNormalization)\n",
-    "- [過学習を荷重減衰による正則化で対策](#過学習を荷重減衰による正則化で対策)\n",
-    "- [過学習をドロップアウトで対策](#過学習をドロップアウトで対策)\n",
-    "- [ハイパーパラメータのランダム探索](#ハイパーパラメータのランダム探索)\n",
+    "  - [アルゴリズム](#アルゴリズム)\n",
+    "  - [検証用の曲面の説明](#検証用の曲面の説明)\n",
+    "  - [実装と検証](#実装と検証)\n",
+    "- [アクティベーション分布](#アクティベーション分布)\n",
+    "  - [重み初期値](#重み初期値)\n",
+    "  - [バッチ正規化_BatchNormalization](#バッチ正規化_BatchNormalization)\n",
+    "- [過学習の対策＝汎化性能の向上](#過学習の対策＝汎化性能の向上)\n",
+    "  - [過学習を荷重減衰による正則化で対策](#過学習を荷重減衰による正則化で対策)\n",
+    "  - [過学習をドロップアウトで対策](#過学習をドロップアウトで対策)\n",
+    "- [ハイパーパラメタのランダム・サーチ](#ハイパーパラメタのランダム・サーチ)\n",
     "\n",
     "## 参考\n",
     "- https://github.com/oreilly-japan/deep-learning-from-scratch/blob/master/notebooks/"
@@ -298,7 +303,9 @@
   {
    "cell_type": "markdown",
    "id": "547ca9d7-e05e-4ed0-b59b-2ceda137764e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### 実装と検証"
    ]
@@ -317,7 +324,6 @@
    "cell_type": "markdown",
    "id": "69fb8909-cb07-4607-b9f3-aa18d04dde88",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -559,18 +565,29 @@
    "id": "d9e41efb-8dd5-4bbc-9a94-4cd60868e538",
    "metadata": {},
    "source": [
-    "## 重み初期値とアクティベーション分布\n",
+    "## アクティベーション分布\n",
     "- アクティベーションとは活性化関数の出力を言う。\n",
     "- このアクティベーションの分布が、\n",
     "  - 活性化関数の勾配０近辺に偏ると勾配消失が起きる。\n",
     "  - また、偏りがあると、表現力の制限問題が起きる。\n",
-    "- これを回避するようアクティベーション分布がバラけるように重みを初期値する。"
+    "- これを回避するようアクティベーション分布をバラけさせる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c0d317c-b679-401e-8c35-df083cdeff8e",
+   "metadata": {},
+   "source": [
+    "### 重み初期値\n",
+    "アクティベーション分布をバラけさせるように重みを初期値する方法。"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "a9479c19-2b6a-4af9-a053-0b678558f03a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### ５層のアフィン変換でアクティベーション分布確認"
    ]
@@ -578,7 +595,9 @@
   {
    "cell_type": "markdown",
    "id": "572ac272-d666-4975-9947-8ff480ec2aa7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "##### ５層のアフィン変換の関数定義"
    ]
@@ -636,7 +655,9 @@
   {
    "cell_type": "markdown",
    "id": "8d2b6b4c-77dd-4597-8a51-999a46c9301d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "##### 実行準備"
    ]
@@ -1018,8 +1039,9 @@
    "id": "19e5080d-e412-40e0-8511-a3eeeb6280e0",
    "metadata": {},
    "source": [
-    "## [バッチ正規化_BatchNormalization](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E6%B7%B1%E5%B1%A4%E5%AD%A6%E7%BF%92%E3%81%AE%E3%83%86%E3%82%AF%E3%83%8B%E3%83%83%E3%82%AF#t3c6ab88)\n",
-    "MultiLayerNetExtendの実装では、全ての全結合と活性化関数の間にバッチ正規化層が挿入されるもよう。"
+    "### [バッチ正規化_BatchNormalization](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E6%B7%B1%E5%B1%A4%E5%AD%A6%E7%BF%92%E3%81%AE%E3%83%86%E3%82%AF%E3%83%8B%E3%83%83%E3%82%AF#t3c6ab88)\n",
+    "- [重み初期値](#重み初期値)ではなく、各層で強制的にアクティベーションう分布を調整する。\n",
+    "- MultiLayerNetExtendの実装では、全ての全結合と活性化関数の間にバッチ正規化層が挿入されるもよう。"
    ]
   },
   {
@@ -1169,10 +1191,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7335b8aa-7b84-477d-b19d-3aaf9b60fe75",
+   "metadata": {},
+   "source": [
+    "## 過学習の対策＝汎化性能の向上"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "19e7c8d6-63f8-42b6-b140-8997ba823942",
    "metadata": {},
    "source": [
-    "## 過学習を荷重減衰による正則化で対策\n",
+    "### 過学習を荷重減衰による正則化で対策\n",
     "[正則化回帰分析](ScikitLearnTraining2.ipynb)のような正則化項を使った方法らしい。"
    ]
   },
@@ -1294,7 +1324,7 @@
    "id": "c5417258-01a0-4207-9cdc-b44931a6e343",
    "metadata": {},
    "source": [
-    "## 過学習を[ドロップアウト](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E6%B7%B1%E5%B1%A4%E5%AD%A6%E7%BF%92%E3%81%AE%E3%83%86%E3%82%AF%E3%83%8B%E3%83%83%E3%82%AF#hf3c7a28)で対策\n",
+    "### 過学習を[ドロップアウト](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E6%B7%B1%E5%B1%A4%E5%AD%A6%E7%BF%92%E3%81%AE%E3%83%86%E3%82%AF%E3%83%8B%E3%83%83%E3%82%AF#hf3c7a28)で対策\n",
     "MultiLayerNetExtendの実装では、全ての活性化関数の後ろにドロップアウト層が挿入されるもよう。"
    ]
   },
@@ -1381,7 +1411,7 @@
    "id": "0cd70898-dc4c-4835-b3a5-590413175458",
    "metadata": {},
    "source": [
-    "## ハイパーパラメータのランダムサーチ\n",
+    "## ハイパーパラメタのランダム・サーチ\n",
     "[機械学習の所で出てきたグリッドサーチ](ScikitLearnTraining5.ipynb)ならぬ、ランダムサーチ"
    ]
   },
@@ -1483,7 +1513,7 @@
     "    if i >= graph_draw_num:\n",
     "        break\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
