--- a/Notebook/Jupyter/path/TableOfContents.ipynb
+++ b/Notebook/Jupyter/path/TableOfContents.ipynb
@@ -291,7 +291,9 @@
   {
    "cell_type": "markdown",
    "id": "a01668b8-12d4-42de-8111-eed3b2c07da0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "##### [深層のCNN](KasagoCNN2.ipynb)"
    ]
@@ -299,7 +301,9 @@
   {
    "cell_type": "markdown",
    "id": "6da3d9a8-239a-4a8e-8640-7635c877cb06",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### TensorFlow・Keras"
    ]
@@ -339,6 +343,48 @@
     "- [画像の前処理](TensorFlowAndKeras5.ipynb)\n",
     "- [前処理加え２値分類を手製CNNで](TensorFlowAndKeras6.ipynb)\n",
     "- [初歩編＋転移学習・ファインチューニング](TensorFlowAndKeras7.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83501574-6c90-40ad-a85f-cbe51c53672a",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### PyTorch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7a8745f-58cd-4544-9d3f-d0ca79c73e0a",
+   "metadata": {},
+   "source": [
+    "#### [環境準備、共通処理](PyTorch0.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee16341b-ebc1-4991-96fe-771dd8aafe4d",
+   "metadata": {},
+   "source": [
+    "#### DNN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a86d5fa-0ac1-4b5d-9867-db568c227222",
+   "metadata": {},
+   "source": [
+    "#### RNN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03c09ca5-105d-478b-805d-9f3fb7ed4120",
+   "metadata": {},
+   "source": [
+    "#### [CNN](PyTorch3.ipynb)"
    ]
   },
   {
