--- a/Notebook/Jupyter/path/TensorFlowAndKeras3.ipynb
+++ b/Notebook/Jupyter/path/TensorFlowAndKeras3.ipynb
@@ -14,9 +14,10 @@
     "  - [インポート](#インポート)\n",
     "  - [共通関数](#共通関数)\n",
     "- [CNNアルゴリズム・モデル](#RNNアルゴリズム・モデル)\n",
+    "  - [MINSTデータ](#MINSTデータ)\n",
     "  - [MINST-DNN](#MINST-DNN)\n",
     "  - [MINST-CNN](#MINST-CNN)\n",
-    "  - [商品の自動タグ付け](#商品の自動タグ付け)\n",
+    "  - [CIFAR-10](#CIFAR-10)\n",
     "\n",
     "## 参考\n",
     "開発基盤部会 Wiki\n",
@@ -142,15 +143,16 @@
     "    pos = 1\n",
     "    plt.figure(figsize=(numOfCls, numOfImgInCls))\n",
     "\n",
+    "    # クラス毎に以下の処理を繰り返す。\n",
     "    for targetClass in range(numOfCls):\n",
     "        targetIdx = []\n",
     "        \n",
-    "        # クラスclassIDの画像のインデックスリストを取得\n",
+    "        # 当該クラスの画像のインデックスリストを取得\n",
     "        for i in range(len(y)):\n",
     "            if y[i] == targetClass:\n",
     "                targetIdx.append(i)\n",
     "        \n",
-    "        # 各クラスからランダムに選んだ最初の10個の画像を描画\n",
+    "        # 当該クラスのインデックスリストからランダムに選んだ最初のn個の画像を描画\n",
     "        np.random.shuffle(targetIdx)\n",
     "        for idx in targetIdx[:numOfImgInCls]:\n",
     "            plt.subplot(numOfCls, numOfImgInCls, pos)\n",
@@ -330,18 +332,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd5ed55c-b54e-4009-b852-c1456021ebb0",
-   "metadata": {},
-   "source": [
-    "### MINST-DNN"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "39787893-d227-495c-8b37-ebf85e123bf8",
    "metadata": {},
    "source": [
-    "#### データ"
+    "### MINSTデータ"
    ]
   },
   {
@@ -349,7 +343,7 @@
    "id": "db0ca358-ca57-4c96-83c4-608158e072aa",
    "metadata": {},
    "source": [
-    "##### 生成"
+    "#### 生成"
    ]
   },
   {
@@ -370,7 +364,7 @@
    "id": "56be97d5-893f-4d14-bda3-a30e6397cb48",
    "metadata": {},
    "source": [
-    "##### 加工\n",
+    "#### 加工\n",
     "一旦、結合します。"
    ]
   },
@@ -391,7 +385,7 @@
    "id": "466d333e-82cd-4ce9-8f83-dcd541d679a9",
    "metadata": {},
    "source": [
-    "##### 理解"
+    "#### 理解"
    ]
   },
   {
@@ -419,7 +413,7 @@
    "id": "451a494c-0e0b-48c6-a99c-0c73693f3ed9",
    "metadata": {},
    "source": [
-    "##### 準備"
+    "#### 準備"
    ]
   },
   {
@@ -427,7 +421,7 @@
    "id": "1a267e3b-3468-4f26-8777-91ee9ccb25d6",
    "metadata": {},
    "source": [
-    "###### XのKeras入力用型変換"
+    "##### XのKeras入力用型変換"
    ]
   },
   {
@@ -445,7 +439,7 @@
    "id": "e2196afa-aaf5-4541-8ca7-de3bddfe6449",
    "metadata": {},
    "source": [
-    "###### Xの画素を0.0-1.0の範囲に正規化"
+    "##### Xの画素を0.0-1.0の範囲に正規化"
    ]
   },
   {
@@ -463,7 +457,7 @@
    "id": "a3ed8219-f4bf-4d4b-8f2e-f81fa350b1ea",
    "metadata": {},
    "source": [
-    "###### 正解ラベルのOne-Hotエンコーディング\n",
+    "##### 正解ラベルのOne-Hotエンコーディング\n",
     "Keras（≒ 深層学習）では正解ラベルはOne-Hotベクトル化が必要。"
    ]
   },
@@ -485,7 +479,7 @@
    "id": "38d2dbb5-594d-47aa-b176-855740f0fc6b",
    "metadata": {},
    "source": [
-    "###### 学習・テストデータの分割"
+    "##### 学習・テストデータの分割"
    ]
   },
   {
@@ -501,6 +495,14 @@
     "y_test = yy[60000:]\n",
     "print(x_train.shape, x_test.shape)\n",
     "print(y_train.shape, y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd5ed55c-b54e-4009-b852-c1456021ebb0",
+   "metadata": {},
+   "source": [
+    "### MINST-DNN"
    ]
   },
   {
@@ -542,13 +544,16 @@
     "\n",
     "# addメソッドで層を追加していく。\n",
     "\n",
-    "# 入力層\n",
     "# Flatten：入力の変換層、入力サイズを指定\n",
     "model.add(Flatten(input_shape=(28, 28)))\n",
     "\n",
-    "# 多層化：繰り返し\n",
+    "# 入力層\n",
+    "# Dense：全結合（線形結合）層、出力サイズを指定\n",
     "model.add(Dense(900))\n",
+    "# Activation: 活性化関数を定義（ReLU\n",
     "model.add(Activation('relu'))\n",
+    "\n",
+    "# 多層化：繰り返し\n",
     "model.add(Dense(1000))\n",
     "model.add(Activation('relu'))\n",
     "model.add(Dense(500))\n",
@@ -579,7 +584,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(loss='categorical_crossentropy', optimizer=SGD(), metrics=['accuracy'])"
+    "model.compile(\n",
+    "    loss='categorical_crossentropy',\n",
+    "    optimizer=SGD(),\n",
+    "    metrics=['accuracy'])"
    ]
   },
   {
@@ -662,11 +670,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11886b7c-176f-4e55-aa1a-52b6a7fe2c6f",
+   "cell_type": "markdown",
+   "id": "f7d41bae-ba13-46fa-936c-e7833a27e032",
    "metadata": {},
-   "outputs": [],
    "source": [
     "model = load_model('../work/minst-dnn.h5')"
    ]
@@ -677,6 +683,14 @@
    "metadata": {},
    "source": [
     "##### 推論"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bf5c59f-e089-45e3-8a33-1301fb606b81",
+   "metadata": {},
+   "source": [
+    "###### 個別"
    ]
   },
   {
@@ -699,6 +713,14 @@
     "    print('正解')\n",
     "else:\n",
     "    print('不正解')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9d77dc4-7528-459c-a008-bfa5b480fc06",
+   "metadata": {},
+   "source": [
+    "###### 一括"
    ]
   },
   {
@@ -887,15 +909,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adf1461c-6d61-4a19-be09-ca8014e290d6",
-   "metadata": {},
-   "source": [
-    "### データ\n",
-    "[MINST-DNN](#MINST-DNN)と同じ。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "4d4f8d00-ff4e-4775-8817-80f6428e1442",
    "metadata": {},
    "source": [
@@ -1070,6 +1083,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d8566c4f-77f3-4897-86cc-3ddfadf1463e",
+   "metadata": {},
+   "source": [
+    "###### 個別"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "40b34aa4-5be3-4092-a171-6b1808d0e44c",
@@ -1089,6 +1110,14 @@
     "    print('正解')\n",
     "else:\n",
     "    print('不正解')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29f0442a-1b86-4bd5-8c5e-a8a2909e6046",
+   "metadata": {},
+   "source": [
+    "###### 一括"
    ]
   },
   {
@@ -1145,8 +1174,8 @@
    "outputs": [],
    "source": [
     "score = model.evaluate(x_std, yy)\n",
-    "print('Test loss:', score[0])\n",
-    "print('Test accuracy:', score[1])"
+    "print('loss:', score[0])\n",
+    "print('accuracy:', score[1])"
    ]
   },
   {
@@ -1262,7 +1291,8 @@
    "id": "c0f6e16a-95aa-4aa5-9ebf-d6b80800f5e0",
    "metadata": {},
    "source": [
-    "### 商品の自動タグ付け"
+    "### CIFAR-10\n",
+    "商品の自動タグ付け"
    ]
   },
   {
@@ -1503,7 +1533,7 @@
     "    kernel_size=(4, 4),      # カーネル・サイズ\n",
     "    strides=(1, 1),          # ストライド\n",
     "    padding='same'))         # パディング\n",
-    "## プーリング増\n",
+    "## プーリング層\n",
     "model.add(MaxPool2D(pool_size=(2, 2))) \n",
     "model.add(Activation('relu'))\n",
     "\n",
@@ -1514,7 +1544,7 @@
     "    kernel_size=(4, 4),\n",
     "    strides=(1, 1),\n",
     "    padding='same'))\n",
-    "## プーリング増\n",
+    "## プーリング層\n",
     "model.add(MaxPool2D(pool_size=(2, 2)))\n",
     "model.add(Activation('relu'))\n",
     "\n",
@@ -1525,7 +1555,7 @@
     "    kernel_size=(4, 4),\n",
     "    strides=(1, 1),\n",
     "    padding='same'))\n",
-    "## プーリング増\n",
+    "## プーリング層\n",
     "model.add(MaxPool2D(pool_size=(2, 2))) \n",
     "model.add(Activation('relu'))\n",
     "\n",
@@ -1666,6 +1696,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "29041323-43e5-4497-8d77-0be3c933d8e0",
+   "metadata": {},
+   "source": [
+    "###### 個別"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e2b2b918-b68c-43f4-bd32-7eb24ea0325c",
@@ -1685,6 +1723,14 @@
     "    print('正解')\n",
     "else:\n",
     "    print('不正解')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "748dbef9-84de-4f48-b977-eee2ab091037",
+   "metadata": {},
+   "source": [
+    "###### 一括"
    ]
   },
   {
@@ -1741,8 +1787,8 @@
    "outputs": [],
    "source": [
     "score = model.evaluate(x_std, yy)\n",
-    "print('Test loss:', score[0])\n",
-    "print('Test accuracy:', score[1])"
+    "print('loss:', score[0])\n",
+    "print('accuracy:', score[1])"
    ]
   },
   {
