--- a/Notebook/Jupyter/path/TableOfContents.ipynb
+++ b/Notebook/Jupyter/path/TableOfContents.ipynb
@@ -300,6 +300,96 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dcc3cfff-602f-4c91-89cf-a855f013b7f4",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### o'reillyのネゴザメ言語モデルの本"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bd816be-acd8-4cc3-a738-787145bc2e5b",
+   "metadata": {},
+   "source": [
+    "#### [復習](NekozameDL1.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e28d4207-74ba-4933-948d-4d9eacb4819e",
+   "metadata": {},
+   "source": [
+    "#### ベクトル化"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72816432-63eb-420b-ae5a-a74b1537f192",
+   "metadata": {},
+   "source": [
+    "##### [カウントベースの手法](NekozameVector1.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f386189-63d7-45e5-a40b-5060c959636c",
+   "metadata": {},
+   "source": [
+    "##### [推論ベースの手法](NekozameVector2.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94620300-ce1a-4ff8-83fb-da357d0c9704",
+   "metadata": {},
+   "source": [
+    "##### [推論ベース手法の高速化](NekozameVector3.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6b33d35-b422-4b11-bb67-d7fd9a811284",
+   "metadata": {},
+   "source": [
+    "#### RNN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faee766e-86d1-46b7-8f9e-5fcd548a1574",
+   "metadata": {},
+   "source": [
+    "##### [RNN](NekozameRNN1.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39010b60-caeb-4c94-9906-96acb616fc78",
+   "metadata": {},
+   "source": [
+    "##### [LSTM](NekozameRNN2.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ab00f3c-5cbe-465b-8662-be78aba244b6",
+   "metadata": {},
+   "source": [
+    "##### [RNNEncDec](NekozameRNN3.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1661d21e-a8e6-46ad-886d-1359f41a9c6b",
+   "metadata": {},
+   "source": [
+    "##### [RNNSearch](NekozameRNN4.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6da3d9a8-239a-4a8e-8640-7635c877cb06",
    "metadata": {
     "tags": []
@@ -415,10 +505,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5999d584-18f0-493c-9e71-c2de1a6d3824",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### 基礎レポート"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "af7f2f53-8e28-4195-bd15-0c4555e69912",
    "metadata": {},
    "source": [
-    "### [DX系プロジェクトについてのレポート](https://1drv.ms/p/s!Amfs5caPP9r5jgb4poXUCpIy_33p)"
+    "#### [DX系プロジェクトについてのレポート](https://1drv.ms/p/s!Amfs5caPP9r5jgb4poXUCpIy_33p)"
    ]
   },
   {
@@ -426,7 +526,7 @@
    "id": "0561a799-eafe-484c-b8ae-518def672c02",
    "metadata": {},
    "source": [
-    "### [機械学習・深層学習についてのレポート](https://1drv.ms/p/s!Amfs5caPP9r5jh-m6pIMwKgDln1N)"
+    "#### [機械学習・深層学習についてのレポート](https://1drv.ms/p/s!Amfs5caPP9r5jh-m6pIMwKgDln1N)"
    ]
   },
   {
@@ -434,7 +534,15 @@
    "id": "7b2b3133-0436-4296-ac97-db95b5557a51",
    "metadata": {},
    "source": [
-    "### [IoTソリューションについてのレポート](https://1drv.ms/p/s!Amfs5caPP9r5jigcq1ECbtb0nqE5)"
+    "#### [IoTソリューションについてのレポート](https://1drv.ms/p/s!Amfs5caPP9r5jigcq1ECbtb0nqE5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6400f7e-94ef-4a49-bf8d-1864bbe94b86",
+   "metadata": {},
+   "source": [
+    "### 詳細レポート"
    ]
   },
   {
@@ -442,7 +550,7 @@
    "id": "e16b84c7-1d48-458d-878b-ff66f38ff69c",
    "metadata": {},
    "source": [
-    "### [深層学習についてのレポート（CNN編）](https://1drv.ms/p/s!Amfs5caPP9r5jlAZEt6cg2zg_2cU)"
+    "#### [深層学習についてのレポート（CNN編）](https://1drv.ms/p/s!Amfs5caPP9r5jlAZEt6cg2zg_2cU)"
    ]
   },
   {
@@ -450,7 +558,41 @@
    "id": "c5ae9d7a-81ba-4250-881f-f2491ccb3b36",
    "metadata": {},
    "source": [
-    "### [深層学習についてのレポート（RNN編）]()"
+    "#### [深層学習についてのレポート（RNN編）](https://1drv.ms/p/s!Amfs5caPP9r5jzVgO9xfbO2sbvkF)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "954f662e-f9e2-49b6-bab0-b0012d1dca60",
+   "metadata": {},
+   "source": [
+    "#### [深層学習についてのレポート（LLM編）](https://1drv.ms/p/s!Amfs5caPP9r5kAtLiKqOHge-zTzs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70cce6dc-f959-48ca-b52b-1aed07f53d79",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### 活用レポート"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99e079a5-bcc1-428d-ac2b-2bb12f117952",
+   "metadata": {},
+   "source": [
+    "#### [学びをサポートするAI活用のAS-ISとTO-BE](https://1drv.ms/p/s!Amfs5caPP9r5kAxog0vFyvOF_zsi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ca34653-0ada-457d-a59d-d9047ce29730",
+   "metadata": {},
+   "source": [
+    "#### [リサーチをサポートするAI活用のAS-ISとTO-BE]()"
    ]
   }
  ],
