--- a/Notebook/Jupyter/path/TableOfContents.ipynb
+++ b/Notebook/Jupyter/path/TableOfContents.ipynb
@@ -311,7 +311,10 @@
   {
    "cell_type": "markdown",
    "id": "1bd816be-acd8-4cc3-a738-787145bc2e5b",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### [復習](NekozameDL1.ipynb)"
    ]
@@ -319,7 +322,9 @@
   {
    "cell_type": "markdown",
    "id": "e28d4207-74ba-4933-948d-4d9eacb4819e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### ベクトル化"
    ]
@@ -386,6 +391,23 @@
    "metadata": {},
    "source": [
     "##### [RNNSearch](NekozameRNN4.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d5bf09f-ebcb-4953-96a1-b50980b89c9a",
+   "metadata": {},
+   "source": [
+    "### o'reillyのツノガレイ強化学習の本"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e495383-1375-4e34-bd21-17cbfba24b30",
+   "metadata": {},
+   "source": [
+    "#### [バンディット問題と動的計画法](PlaiceDRL1.ipynb)\n",
+    "#### [モンテカルロ法とTD法](PlaiceDRL2.ipynb)"
    ]
   },
   {
